// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Category list correctly 1`] = `
<div
  className="categories"
  id="categories"
>
  <h3>
    Categories
  </h3>
  <form>
    <input
      name="newCategory"
      type="text"
    />
    <button
      type="submit"
    >
      New
    </button>
  </form>
  <ul
    className="ul-no-bullet"
  >
    <li
      key="React"
    >
      <Link
        className="nav-link active"
        replace={false}
        to="/category/React"
      >
        React
      </Link>
    </li>
    <li
      key="JavaScript"
    >
      <Link
        className="nav-link active"
        replace={false}
        to="/category/JavaScript"
      >
        JavaScript
      </Link>
    </li>
  </ul>
</div>
`;

exports[`should render Category list with empty message 1`] = `
<div
  className="categories"
  id="categories"
>
  <h3>
    Categories
  </h3>
  <form>
    <input
      name="newCategory"
      type="text"
    />
    <button
      type="submit"
    >
      New
    </button>
  </form>
  <ul
    className="ul-no-bullet"
  >
    <p>
      Create your first Category
    </p>
  </ul>
</div>
`;
